use mono output in pulseaudio

--- a/todo.org
+++ b/todo.org
@@ -5,12 +5,12 @@
 - [X] MIDI in
 - [X] note on/note off
 
-* [2/5] todos
+* [3/5] todos
 
 - [X] build pipeline
 - [X] play corresponding notes on note on/note off
 - [ ] play smooth sounds (it's currently awful)
-- [ ] switch to mono output as long as there is no stereo data
+- [X] switch to mono output as long as there is no stereo data
 - [ ] find a better name than /synth/
 
 * [0/13] features
