--- a/todo.org
+++ b/todo.org
@@ -13,7 +13,7 @@
 - [X] switch to mono output as long as there is no stereo data
 - [ ] find a better name than /synth/
 
-* [2/15] features
+* [3/15] features
 
 - [ ] variable sample rate
 - [ ] refactor duplicated code in error handling (in input and output)
@@ -31,7 +31,7 @@
 - [ ] stereo output?
 - [X] ADSR envelope
 - [ ] configure ADSR parameters via MIDI controls
-- [ ] support velocity on note on/note off
+- [X] support velocity on note on/note off
 - [ ] support aftertouch?
 - [X] add some status output
 - [ ] use main thread for some commands (like quit)
