polyphony: prefer free lanes to stopping other sounds

--- a/todo.org
+++ b/todo.org
@@ -36,3 +36,5 @@
 - [ ] support aftertouch?
 - [X] add some status output
 - [ ] use main thread for some commands (like quit)
+- [ ] re-using an active lane does not reset the envelope.value of
+  that lane; decide whether that is a bug or a feature
