--- a/todo.org
+++ b/todo.org
@@ -17,9 +17,9 @@
 
 - [ ] variable sample rate
 - [ ] refactor duplicated code in error handling (in input and output)
-- [-] [2/5] more oscillators
+- [-] [3/5] more oscillators
   - [ ] sine
-  - [ ] triangle
+  - [X] triangle
   - [X] sawtooth up
   - [X] sawtooth down
   - [ ] wavelets (which?)
