--- a/todo.org
+++ b/todo.org
@@ -13,12 +13,12 @@
 - [X] switch to mono output as long as there is no stereo data
 - [X] find a better name than /synth/
 
-* [10/23] features
+* [11/23] features
 
 - [ ] variable sample rate
 - [ ] refactor duplicated code in error handling (in input and output)
-- [-] [4/5] more oscillators
-  - [ ] sine
+- [X] [5/5] more oscillators
+  - [X] sine
   - [X] triangle
   - [X] sawtooth up
   - [X] sawtooth down
